--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </section>
 
             <picture class="info-block__banner">
-                <img class="info-block__banner--image" src="img/_MG_3223.jpg" alt="">
+                <img class="info-block__banner--image" src="https://github.com/ElizavetaKitaeva/Kata1.3/blob/a96390e1f9eeb775f9956853532c6c88f0738d38/img/_MG_3223.jpg" alt="">
             </picture>
 
         </div>
