--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
                         <button class="header__navigation--button chat"><img  src="img/chat.svg" alt="logo"></button>
                         <button class="header__navigation--button profile"><img  src="img/profile.svg" alt="logo"></button>
                         <div class="line"></div>
-                        <button class="header__navigation--button repair"><p class="header__navigation--button--text">Cтавить заявку</p> <img src="img/repair.svg" alt="repair"></button>
+                        <button class="header__navigation--button repair"><p class="header__navigation--button--text">Оставить заявку</p> <img src="img/repair.svg" alt="repair"></button>
                         <button class="header__navigation--button checkstatus"><p class="header__navigation--button--text">Статус ремонта</p> <img src="img/checkstatus.svg" alt="checkstatus"></button>
                     </div>
                 </nav>
 
                 <div class="service-title">
-                    <div class="service-title__line"></div>
                     <h1 class="service-title__name">Услуги и сервисы</h1>
                 </div>
             </div>
