--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <div class="container">
+        <aside>
+        </aside>
             <div class="header">
                 <nav class="header__navigation">
                     <div class="header__navigation--left-menu">
@@ -27,8 +29,8 @@
                         <button class="header__navigation--button checkstatus"><p class="header__navigation--button--text">Статус ремонта</p> <img src="img/checkstatus.svg" alt="checkstatus"></button>
                     </div>
                 </nav>
-
-                <div class="service-title">
+           
+                <div class="service-title"> 
                     <h1 class="service-title__name">Услуги и сервисы</h1>
                 </div>
             </div>
