--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-        <aside>
+        <aside class="sidebar">
         </aside>
             <div class="header">
                 <nav class="header__navigation">
