--- a/index.html
+++ b/index.html
@@ -11,33 +11,25 @@
     <header>
         <div class="container">
         <aside class="sidebar">
-        </aside>
-            <div class="header">
-                <nav class="header__navigation">
-                    <div class="header__navigation--left-menu">
-                        <button class="header__navigation--button burger"><img src="img/burger.svg" alt="burger"></button>
-                        <div class="first-line"></div>
+            <div class="sidebar__header">
+                <nav class="sidebar__header--header__navigation">
+                    <div class="sidebar__header--header__navigation--left-menu">
+                        <button class="header__navigation--button burger"></button>
                         <img class="logo" src="img/Group.svg" alt="logo"> 
                     </div>
-
-                    <div class="header__navigation--right-menu">
-                        <button class="header__navigation--button call"><img  src="img/call.svg" alt="logo"></button>
-                        <button class="header__navigation--button chat"><img  src="img/chat.svg" alt="logo"></button>
-                        <button class="header__navigation--button profile"><img  src="img/profile.svg" alt="logo"></button>
-                        <div class="line"></div>
-                        <button class="header__navigation--button repair"><p class="header__navigation--button--text">Оставить заявку</p> <img src="img/repair.svg" alt="repair"></button>
-                        <button class="header__navigation--button checkstatus"><p class="header__navigation--button--text">Статус ремонта</p> <img src="img/checkstatus.svg" alt="checkstatus"></button>
+                    <div class="sidebar__header--header__navigation--right-menu">
+                        <button class="header__navigation--button"><img class="search" src="img/search.png" alt="search"></button>
                     </div>
                 </nav>
-           
-                <div class="service-title"> 
-                    <h1 class="service-title__name">Услуги и сервисы</h1>
-                </div>
             </div>
+            <main>
+
+            </main>
+        </aside>
         </div>
     </header>
 
-    <main>
+    <!-- <main>
         <div class="container">
            
             <nav class="navigation-block">
@@ -78,6 +70,6 @@
     </div> 
     </main>
     <footer>
-    </footer>
+    </footer> -->
 </body>
 </html>
