--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
               <botton class="sidebar__main__button message"></botton>
               <botton class="sidebar__main__button user"></botton>
             </div>
-            <p class="sidebar__main__input mail">mail@cps.com</p>
-            <p class="sidebar__main__input number">8 800 890 8900</p>
+            <input type="mail" class="sidebar__main__input mail" value="mail@cps.com" readonly>
+            <input type="tel" class="sidebar__main__input number" value="8 800 890 8900" readonly>
             <form class="sidebar__main__form languages">
               <input
                 class="sidebar__main__radio"
