--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
           <div class="sidebar__main__block bottom-menu">
             <div class="sidebar__main__bottons-block">
-              <botton class="sidebar__main__button phone"></botton>
-              <botton class="sidebar__main__button message"></botton>
-              <botton class="sidebar__main__button user"></botton>
+              <button class="sidebar__main__button phone"></button>
+              <button class="sidebar__main__button message"></button>
+              <button class="sidebar__main__button user"></button>
             </div>
             <input type="mail" class="sidebar__main__input mail" value="mail@cps.com" readonly>
             <input type="tel" class="sidebar__main__input number" value="8 800 890 8900" readonly>
