--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 type="radio"
                 name="contact"
               />
-              <label class="sidebar__main__label" for="ru">RU</label>
+              <label class="sidebar__main__label" for="ru" checked>RU</label>
               <input
                 class="sidebar__main__radio"
                 id="en"
