--- a/index.html
+++ b/index.html
@@ -69,21 +69,22 @@
                 class="sidebar__main__radio"
                 id="ru"
                 type="radio"
-                name="contact"
+                name="radio_lang"
+                checked
               />
-              <label class="sidebar__main__label" for="ru">RU</label>
+              <label class="sidebar__main__label" for="ru" checked>RU</label>
               <input
                 class="sidebar__main__radio"
                 id="en"
                 type="radio"
-                name="contact"
+                name="radio_lang"
               />
               <label class="sidebar__main__label" for="en">EN</label>
               <input
                 class="sidebar__main__radio"
                 id="ch"
                 type="radio"
-                name="contact"
+                name="radio_lang"
               />
               <label class="sidebar__main__label" for="ch">CH</label>
             </form>
