--- a/index.html
+++ b/index.html
@@ -6,91 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <title>Услуги и сервисы</title>
   </head>
   <body>
-    <aside class="sidebar">
-      <div class="sidebar__container">
-        <div class="sidebar__header">
-          <nav class="sidebar__header__navigation">
-            <div class="sidebar__header__block left-menu">
-              <button class="sidebar__header__button burger"></button>
-              <img
-                class="sidebar__header__img logo"
-                src="img/Group.svg"
-                alt="logo"
-              />
-            </div>
-            <div class="sidebar__header__block right-menu">
-              <button class="sidebar__header__button search"></button>
-            </div>
-          </nav>
+    <main>
+      <div class="container">
+        <div class="header">
+          <h2 class="header__title">Ремонт техники различных брендов</h2>
         </div>
-        <main class="sidebar__main">
-          <nav class="sidebar__main__navigation">
-            <ul class="sidebar__main__list">
-              <li>
-                <a class="sidebar__main__link" href="#">Ремонт техники</a>
-              </li>
-              <li>
-                <a class="sidebar__main__link" href="#">Услуги и сервисы</a>
-              </li>
-              <li>
-                <a class="sidebar__main__link" href="#"
-                  >Корпоративным клиентам</a
-                >
-              </li>
-              <li>
-                <a class="sidebar__main__link" href="#">Продавцам техники</a>
-              </li>
-              <li><a class="sidebar__main__link" href="#">Партнерам</a></li>
-              <li>
-                <a class="sidebar__main__link" href="#">Производителям</a>
-              </li>
-              <li>
-                <a class="sidebar__main__link" href="#"
-                  >Наши сервисные центры</a
-                >
-              </li>
-              <li><a class="sidebar__main__link" href="#">Контакты</a></li>
-            </ul>
-          </nav>
-
-          <div class="sidebar__main__block bottom-menu">
-            <div class="sidebar__main__bottons-block">
-              <button class="sidebar__main__button phone"></button>
-              <button class="sidebar__main__button message"></button>
-              <button class="sidebar__main__button user"></button>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <button class="swiper-slide__button lenovo"></button>
             </div>
-            <input type="mail" class="sidebar__main__input mail" value="mail@cps.com" readonly>
-            <input type="tel" class="sidebar__main__input number" value="8 800 890 8900" readonly>
-            <form class="sidebar__main__form languages">
-              <input
-                class="sidebar__main__radio"
-                id="ru"
-                type="radio"
-                name="radio_lang"
-                checked
-              />
-              <label class="sidebar__main__label" for="ru" checked>RU</label>
-              <input
-                class="sidebar__main__radio"
-                id="en"
-                type="radio"
-                name="radio_lang"
-              />
-              <label class="sidebar__main__label" for="en">EN</label>
-              <input
-                class="sidebar__main__radio"
-                id="ch"
-                type="radio"
-                name="radio_lang"
-              />
-              <label class="sidebar__main__label" for="ch">CH</label>
-            </form>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button samsung"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button apple"></button>
+            </div>
+
+            <div class="swiper-slide">
+              <button class="swiper-slide__button bosch"></button>
+            </div>
+
+            <div class="swiper-slide">
+              <button class="swiper-slide__button hp"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button acer"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button viewsonic"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button sony"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button lenovo"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button samsung"></button>
+            </div>
+            <div class="swiper-slide">
+              <button class="swiper-slide__button apple"></button>
+            </div>
           </div>
-        </main>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+        <button class="brands__button">
+          <img class="img" src="img/more.png" alt="" srcset="" />
+          <p class="qwqw">Показать все</p>
+        </button>
       </div>
-    </aside>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
