--- a/index.html
+++ b/index.html
@@ -15,54 +15,57 @@
   <body>
     <main>
       <div class="container">
-        <div class="header">
-          <h2 class="header__title">Ремонт техники различных брендов</h2>
-        </div>
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <button class="swiper-slide__button lenovo"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button samsung"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button apple"></button>
-            </div>
-
-            <div class="swiper-slide">
-              <button class="swiper-slide__button bosch"></button>
-            </div>
-
-            <div class="swiper-slide">
-              <button class="swiper-slide__button hp"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button acer"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button viewsonic"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button sony"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button lenovo"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button samsung"></button>
-            </div>
-            <div class="swiper-slide">
-              <button class="swiper-slide__button apple"></button>
-            </div>
+        <div class="brands">
+          <div class="brands-header">
+            <h2 class="brands-header__title">
+              Ремонт техники различных брендов
+            </h2>
           </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <button class="swiper-slide__button lenovo"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button samsung"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button apple"></button>
+              </div>
+
+              <div class="swiper-slide">
+                <button class="swiper-slide__button bosch"></button>
+              </div>
+
+              <div class="swiper-slide">
+                <button class="swiper-slide__button hp"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button acer"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button viewsonic"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button sony"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button lenovo"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button samsung"></button>
+              </div>
+              <div class="swiper-slide">
+                <button class="swiper-slide__button apple"></button>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <button class="brands__button">
+            <img class="brands__button__image" src="img/more.png" alt="" srcset="" />
+            <p class="brands__button__text">Показать все</p>
+          </button>
         </div>
-        <button class="brands__button">
-          <img class="img" src="img/more.png" alt="" srcset="" />
-          <p class="qwqw">Показать все</p>
-        </button>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
